fix horizontal scrolling bug
Replaced absolute positioning for fixed, and inlcuded visibility property to
hidden to remove from initial accessibility tree.

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 body {
   color: rgb(5, 46, 22);
   background-color: var(--stone-100);
-  overflow-x: hidden;
+  overflow: hidden auto;
 }
 
 .list_spacing > * + * {
